// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen renders screen with data from API 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        nativeID="animatedComponent"
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="rgb(0, 122, 255)"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="Login"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        />
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": Object {
                    "100": "#fee2e2",
                    "200": "#fecaca",
                    "300": "#fca5a5",
                    "400": "#f87171",
                    "50": "#fef2f2",
                    "500": "#ef4444",
                    "600": "#dc2626",
                    "700": "#b91c1c",
                    "800": "#991b1b",
                    "900": "#7f1d1d",
                  },
                  "display": "flex",
                  "flex": 1,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                    "paddingBottom": 32,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 32,
                    "width": "80%",
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    accessibilityLabel="Innuendo"
                    alt="Innuendo"
                    dataSet={Object {}}
                    onError={[Function]}
                    source={
                      Object {
                        "testUri": "../../../src/assets/logos/round.png",
                      }
                    }
                    style={
                      Object {
                        "height": 64,
                        "maxWidth": "100%",
                        "width": 64,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": 16,
                      }
                    }
                  />
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#22d3ee",
                        "fontFamily": undefined,
                        "fontSize": 30,
                        "fontStyle": "normal",
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 37.5,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Connexion
                  </Text>
                </View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "height": 24,
                    }
                  }
                />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                >
                  <View
                    dataSet={Object {}}
                    isInvalid={false}
                    isRequired={true}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      feedbackId="field-3-feedback"
                      hasFeedbackText={true}
                      hasHelpText={false}
                      helpTextId="field-3-helptext"
                      isDisabled={false}
                      isInvalid={false}
                      isReadOnly={false}
                      isRequired={true}
                      labelId="field-3-label"
                      nativeID="field-3-label"
                      setHasFeedbackText={[Function]}
                      setHasHelpText={[Function]}
                      style={
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "flex-start",
                          "marginBottom": 4,
                          "marginTop": 4,
                        }
                      }
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#737373",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Addresse email
                      </Text>
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      dataSet={Object {}}
                      isFocused={false}
                      style={
                        Object {
                          "alignItems": "center",
                          "borderColor": "#06b6d4",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginLeft": 16,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰇰
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <TextInput
                        accessibilityDescribedBy="field-3-feedback"
                        accessibilityRequired={true}
                        accessible={true}
                        autoCapitalize="none"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={true}
                        nativeID="field-3-input"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholder="example@gmail.com"
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        required={true}
                        secureTextEntry={false}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "color": "#171717",
                            "flex": 1,
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "height": "100%",
                            "paddingBottom": 8,
                            "paddingLeft": 12,
                            "paddingRight": 12,
                            "paddingTop": 8,
                            "width": "100%",
                          }
                        }
                        value="toto@gmail.com"
                      />
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    isInvalid={false}
                    isRequired={true}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      feedbackId="field-4-feedback"
                      hasFeedbackText={true}
                      hasHelpText={false}
                      helpTextId="field-4-helptext"
                      isDisabled={false}
                      isInvalid={false}
                      isReadOnly={false}
                      isRequired={true}
                      labelId="field-4-label"
                      nativeID="field-4-label"
                      setHasFeedbackText={[Function]}
                      setHasHelpText={[Function]}
                      style={
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "flex-start",
                          "marginBottom": 4,
                          "marginTop": 4,
                        }
                      }
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#737373",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Mot de passe
                      </Text>
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      dataSet={Object {}}
                      isFocused={false}
                      style={
                        Object {
                          "alignItems": "center",
                          "borderColor": "#06b6d4",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginLeft": 16,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰌾
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <TextInput
                        accessibilityDescribedBy="field-4-feedback"
                        accessibilityRequired={true}
                        accessible={true}
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={true}
                        nativeID="field-4-input"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Mot de passe"
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        required={true}
                        secureTextEntry={true}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "color": "#171717",
                            "flex": 1,
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "height": "100%",
                            "paddingBottom": 8,
                            "paddingLeft": 12,
                            "paddingRight": 12,
                            "paddingTop": 8,
                            "width": "100%",
                          }
                        }
                        value="tutu974"
                      />
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        onPress={[Function]}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginRight": 8,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    accessibilityRole="button"
                    accessible={true}
                    collapsable={false}
                    colorScheme="primary"
                    dataSet={Object {}}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onHoverIn={[Function]}
                    onHoverOut={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#0891b2",
                        "borderRadius": 4,
                        "elevation": 7,
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "marginTop": 8,
                        "paddingBottom": 10,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 10,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 3,
                          "width": 0,
                        },
                        "shadowOpacity": 0.29,
                        "shadowRadius": 4.65,
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                      test={true}
                    >
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      >
                        <Text
                          dataSet={Object {}}
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#fafafa",
                              "fontFamily": undefined,
                              "fontSize": 14,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 21,
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          Se connecter
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "height": 24,
                    }
                  }
                />
                <Text
                  dataSet={Object {}}
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#171717",
                      "fontFamily": undefined,
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 21,
                      "textAlign": "center",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Pas encore de compte ? 
                  <Text
                    dataSet={Object {}}
                    onPress={[Function]}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#34d399",
                        "fontFamily": undefined,
                        "fontSize": undefined,
                        "fontStyle": undefined,
                        "fontWeight": "700",
                        "textDecorationLine": "underline",
                      }
                    }
                  >
                    S'enregistrer
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SignupScreen renders screen with data from API 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenStack
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        nativeBackButtonDismissalEnabled={false}
        nativeID="animatedComponent"
        onAppear={[Function]}
        onDisappear={[Function]}
        onDismissed={[Function]}
        onHeaderBackButtonClicked={[Function]}
        onNativeDismissCancelled={[Function]}
        onTransitionProgress={[Function]}
        onWillDisappear={[Function]}
        replaceAnimation="push"
        stackPresentation="push"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        swipeDirection="horizontal"
      >
        <RNSScreenStackHeaderConfig
          backButtonInCustomView={false}
          backgroundColor="rgb(255, 255, 255)"
          color="rgb(0, 122, 255)"
          direction="ltr"
          disableBackButtonMenu={false}
          hidden={false}
          hideBackButton={false}
          largeTitleHideShadow={false}
          title="SignUp"
          titleColor="rgb(28, 28, 30)"
          topInsetEnabled={false}
          translucent={false}
        />
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            Object {
              "flex": 1,
              "flexDirection": "column-reverse",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                },
                undefined,
              ]
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": Object {
                    "100": "#fee2e2",
                    "200": "#fecaca",
                    "300": "#fca5a5",
                    "400": "#f87171",
                    "50": "#fef2f2",
                    "500": "#ef4444",
                    "600": "#dc2626",
                    "700": "#b91c1c",
                    "800": "#991b1b",
                    "900": "#7f1d1d",
                  },
                  "display": "flex",
                  "flex": 1,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "alignItems": "center",
                    "paddingBottom": 32,
                    "paddingLeft": 8,
                    "paddingRight": 8,
                    "paddingTop": 32,
                    "width": "80%",
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    accessibilityLabel="Innuendo"
                    alt="Innuendo"
                    dataSet={Object {}}
                    onError={[Function]}
                    source={
                      Object {
                        "testUri": "../../../src/assets/logos/round.png",
                      }
                    }
                    style={
                      Object {
                        "height": 64,
                        "maxWidth": "100%",
                        "width": 64,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": 16,
                      }
                    }
                  />
                  <Text
                    dataSet={Object {}}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#22d3ee",
                        "fontFamily": undefined,
                        "fontSize": 30,
                        "fontStyle": "normal",
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 37.5,
                        "textDecorationLine": undefined,
                      }
                    }
                  >
                    Connexion
                  </Text>
                </View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "height": 24,
                    }
                  }
                />
                <View
                  dataSet={Object {}}
                  style={Object {}}
                >
                  <View
                    dataSet={Object {}}
                    isInvalid={false}
                    isRequired={true}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      feedbackId="field-20-feedback"
                      hasFeedbackText={true}
                      hasHelpText={false}
                      helpTextId="field-20-helptext"
                      isDisabled={false}
                      isInvalid={false}
                      isReadOnly={false}
                      isRequired={true}
                      labelId="field-20-label"
                      nativeID="field-20-label"
                      setHasFeedbackText={[Function]}
                      setHasHelpText={[Function]}
                      style={
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "flex-start",
                          "marginBottom": 4,
                          "marginTop": 4,
                        }
                      }
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#737373",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Addresse email
                      </Text>
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      dataSet={Object {}}
                      isFocused={false}
                      style={
                        Object {
                          "alignItems": "center",
                          "borderColor": "#06b6d4",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginLeft": 16,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰇰
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <TextInput
                        accessibilityDescribedBy="field-20-feedback"
                        accessibilityRequired={true}
                        accessible={true}
                        autoCapitalize="none"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={true}
                        nativeID="field-20-input"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholder="example@gmail.com"
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        required={true}
                        secureTextEntry={false}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "color": "#171717",
                            "flex": 1,
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "height": "100%",
                            "paddingBottom": 8,
                            "paddingLeft": 12,
                            "paddingRight": 12,
                            "paddingTop": 8,
                            "width": "100%",
                          }
                        }
                        value="toto@gmail.com"
                      />
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    isInvalid={false}
                    isRequired={true}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      feedbackId="field-21-feedback"
                      hasFeedbackText={true}
                      hasHelpText={false}
                      helpTextId="field-21-helptext"
                      isDisabled={false}
                      isInvalid={false}
                      isReadOnly={false}
                      isRequired={true}
                      labelId="field-21-label"
                      nativeID="field-21-label"
                      setHasFeedbackText={[Function]}
                      setHasHelpText={[Function]}
                      style={
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "flex-start",
                          "marginBottom": 4,
                          "marginTop": 4,
                        }
                      }
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#737373",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Mot de passe
                      </Text>
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      dataSet={Object {}}
                      isFocused={false}
                      style={
                        Object {
                          "alignItems": "center",
                          "borderColor": "#06b6d4",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginLeft": 16,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰌾
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <TextInput
                        accessibilityDescribedBy="field-21-feedback"
                        accessibilityRequired={true}
                        accessible={true}
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={true}
                        nativeID="field-21-input"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Mot de passe"
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        required={true}
                        secureTextEntry={true}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "color": "#171717",
                            "flex": 1,
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "height": "100%",
                            "paddingBottom": 8,
                            "paddingLeft": 12,
                            "paddingRight": 12,
                            "paddingTop": 8,
                            "width": "100%",
                          }
                        }
                        value="tutu974"
                      />
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        onPress={[Function]}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginRight": 8,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    isInvalid={false}
                    isRequired={true}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      feedbackId="field-22-feedback"
                      hasFeedbackText={true}
                      hasHelpText={false}
                      helpTextId="field-22-helptext"
                      isDisabled={false}
                      isInvalid={false}
                      isReadOnly={false}
                      isRequired={true}
                      labelId="field-22-label"
                      nativeID="field-22-label"
                      setHasFeedbackText={[Function]}
                      setHasHelpText={[Function]}
                      style={
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "flex-start",
                          "marginBottom": 4,
                          "marginTop": 4,
                        }
                      }
                    >
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#737373",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        Confirmer le mot de passe
                      </Text>
                      <Text
                        dataSet={Object {}}
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "color": "#dc2626",
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 21,
                            "textDecorationLine": undefined,
                          }
                        }
                      >
                        *
                      </Text>
                    </View>
                    <View
                      dataSet={Object {}}
                      isFocused={false}
                      style={
                        Object {
                          "alignItems": "center",
                          "borderColor": "#06b6d4",
                          "borderRadius": 9,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "overflow": "hidden",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginLeft": 16,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰌾
                      </Text>
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <TextInput
                        accessibilityDescribedBy="field-22-feedback"
                        accessibilityRequired={true}
                        accessible={true}
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={true}
                        nativeID="field-22-input"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Confirmer le mot de passe"
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        required={true}
                        secureTextEntry={true}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "color": "#171717",
                            "flex": 1,
                            "fontFamily": undefined,
                            "fontSize": 14,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "height": "100%",
                            "paddingBottom": 8,
                            "paddingLeft": 12,
                            "paddingRight": 12,
                            "paddingTop": 8,
                            "width": "100%",
                          }
                        }
                        value=""
                      />
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      />
                      <Text
                        allowFontScaling={false}
                        dataSet={Object {}}
                        onPress={[Function]}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": undefined,
                              "fontSize": 12,
                            },
                            Object {
                              "color": "#06b6d4",
                              "fontSize": 16,
                              "height": 16,
                              "lineHeight": 16,
                              "marginRight": 8,
                              "width": 16,
                            },
                            Object {
                              "fontFamily": "Material Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    accessibilityRole="button"
                    accessible={true}
                    collapsable={false}
                    colorScheme="primary"
                    dataSet={Object {}}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onHoverIn={[Function]}
                    onHoverOut={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#0891b2",
                        "borderRadius": 4,
                        "elevation": 7,
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "marginTop": 8,
                        "paddingBottom": 10,
                        "paddingLeft": 12,
                        "paddingRight": 12,
                        "paddingTop": 10,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 3,
                          "width": 0,
                        },
                        "shadowOpacity": 0.29,
                        "shadowRadius": 4.65,
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                      test={true}
                    >
                      <View
                        dataSet={Object {}}
                        style={Object {}}
                      >
                        <Text
                          dataSet={Object {}}
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#fafafa",
                              "fontFamily": undefined,
                              "fontSize": 14,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 21,
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          Créer un compte
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "height": 24,
                    }
                  }
                />
                <Text
                  dataSet={Object {}}
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "color": "#171717",
                      "fontFamily": undefined,
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 21,
                      "textAlign": "center",
                      "textDecorationLine": undefined,
                    }
                  }
                >
                  Déjà un compte ? 
                  <Text
                    dataSet={Object {}}
                    onPress={[Function]}
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "color": "#34d399",
                        "fontFamily": undefined,
                        "fontSize": undefined,
                        "fontStyle": undefined,
                        "fontWeight": "700",
                        "textDecorationLine": "underline",
                      }
                    }
                  >
                    Se connecter
                  </Text>
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenStack>
  </View>
</RNCSafeAreaProvider>
`;
